# bot_gps

./: CMakeLists.txt  README.md  package.xml
bot_desc/: CMakeLists.txt  package.xml
bot_desc/description_gps/: 3d_lidar.xacro  camera.xacro  gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  robot_core_control.xacro
bot_desc/description_gps_n/: 3d_lidar.xacro  gazebo_control.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  robot_core_control.xacro  ros2_control.xacro
bot_desc/launch/: view.launch.py
bot_desc/script/: client_conv.py  conversion.py  gps_to_cartesian_node.py  gps_waypoint_logger.py  server_conv.py  teleop_node.py
bot_desc/src/: cmd_vel.cpp
bot_desc/srv/: Gpstomap.srv
bot_desc/worlds/: farm.world  farm_vineyard_crops.world  farm_vineyard_crops_challenge1.world  farmplant.sdf  ma_sim.sdf  tree.sdf  vinebo.sdf
bot_nav/: CMakeLists.txt  package.xml
bot_nav/config/: nav2_no_map_params.yaml  nav2_plant.yaml
bot_nav/launch/: nav.launch.py
bot_nav/script/: client_conv.py  conversion.py  server_conv.py  waypoint.py
config/: my_controller.yaml
description/: camera.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  robot_gazebo.xacro  ros2_control.xacro
launch/: robot_move.launch.py  view_robot.launch.py
log/: latest_list
src/: cmd_vel.cpp
